--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,10 @@ ENV/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/**/ioder.iml
+.idea/**/misc.xml
+.idea/**/modules.xml
+.idea/**/vcs.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
